# hg2-data-extractor

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/hg2_data_extractor/: __init__.py  cli.py  config.py  data_cipher.py  data_downloader.py  data_extractor.py  enums.py  exceptions.py  utils.py
